# SaloneVest--main

./: .env.example  .gitignore  ALL_INVESTMENTS_SUMMARY.md  ANCHOR_DEVELOPMENT_GUIDE.md  ANCHOR_QUICK_REFERENCE.md  ANCHOR_SETUP_PROGRESS.md  API_404_DIAGNOSIS.md  API_ERROR_FIX.md  BACKEND_API_IMPLEMENTATION.md  BUILD_AND_DEPLOYMENT_STATUS.md  BUILD_ERROR_FIXED.md  BUILD_ERROR_RESOLUTION.md  CHECKLIST.md  COMPLETE_ERROR_FIX_GUIDE.md  COMPLETE_STARTUP_GUIDE.md  CONTRIBUTING.md  DASHBOARD_DOCUMENTATION_INDEX.md  DASHBOARD_FEATURES.md  DASHBOARD_QUICK_GUIDE.md  DASHBOARD_QUICK_START.md  DASHBOARD_RESTORE_STATUS.md  DASHBOARD_UI_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIONS_GUIDE.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_RENDER.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERCEL.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  DIASPORA_VALUE_PROPOSITION.md  DOCUMENTATION_INDEX.md  ERRORS_RESOLVED_SUMMARY.md  ERROR_FIX_COMPLETION_REPORT.md  ERROR_RESOLUTION_REPORT.md  EXPLORE_OPPORTUNITIES_FEATURE.md  FEATURE_SUMMARY.md  FINAL_HEALTH_REPORT.md  (+42 more)
anchor/: .dockerignore  Anchor.toml  BUILD_WITHOUT_DOCKER.md  Cargo.toml  DOCKER_EXTENSION_GUIDE.md  Dockerfile  HANDOFF_README.md  INSTALLATION_GUIDE.md  QUICK_START.md  RUN_FROM_VSCODE.md  SETUP_COMPLETE.md  build-anchor.ps1  install-and-build.ps1  package.json  prepare_handoff.ps1  tsconfig.json
anchor/programs/investment_escrow/: Cargo.toml
anchor/templates/: Anchor.toml  deploy.sh  investment_escrow.ts  lib.rs
anchor/tests/: investment_escrow.ts
(+152 files in other folders)
